--- a/requirements.txt
+++ b/requirements.txt
@@ -1,365 +1,91 @@
-about-time==4.2.1
-adblockparser==0.7
-aiodns==3.5.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.9
-aiohttp_socks==0.10.1
-aiosignal==1.3.2
-alive-progress==3.2.0
-altair==5.0.1
-aniso8601==10.0.1
-anyio==4.4.0
-apturl==0.5.2
-arabic-reshaper==3.0.0
-argcomplete==3.5.2
-asgiref==3.8.1
-asn1crypto==1.5.1
-asttokens==3.0.0
-async-timeout==5.0.1
-attrs==24.3.0
-autocommand==2.2.2
-Babel==2.8.0
-backports.tarfile==1.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.12.3
-bitarray==2.9.2
-bitstring==4.2.3
-blake2b-py==0.3.0
-blessed==1.20.0
-blinker==1.9.0
-Brlapi==0.8.3
-Brotli==1.1.0
-bs4==0.0.2
-cached-property==1.5.2
-cachetools==5.3.1
-certifi==2024.12.14
-cffi==1.16.0
-cfgv==3.4.0
-chardet==5.2.0
-charset-normalizer==3.1.0
-cheroot==10.0.1
-CherryPy==18.10.0
-cherrypy-cors==1.7.0
-chrome-gnome-shell==0.0.0
-ckzg==1.0.2
-click==8.1.3
-cloudscraper==1.2.71
-coincurve==20.0.0
-colorama==0.4.6
-coloredlogs==15.0.1
-configparser==7.0.0
-contourpy==1.2.1
-coverage==6.5.0
-cryptography==43.0.3
-cssselect2==0.8.0
-cupshelpers==1.0
-cycler==0.12.1
-cytoolz==0.12.3
-dbus-python==1.2.18
-decorator==5.1.1
-defer==1.0.6
-dictionaries==0.0.2
-dicttoxml==1.7.16
-dirsearch==0.4.2
-distlib==0.3.8
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-dnspython==2.6.1
-duplicity==0.8.21
-ecdsa==0.19.0
-editor==1.6.6
-email_validator==2.2.0
-esptool==4.8.1
-et-xmlfile==1.1.0
-eth-abi==4.2.1
-eth-account==0.11.2
-eth-bloom==1.0.4
-eth-hash==0.3.3
-eth-keyfile==0.8.1
-eth-keys==0.4.0
-eth-rlp==0.3.0
-eth-typing==3.5.2
-eth-utils==2.3.1
-ethereum-input-decoder==0.2.2
-exceptiongroup==1.2.1
-executing==2.2.0
-ExifRead==2.3.2
-exrex==0.11.0
-fasteners==0.14.1
-filelock==3.15.4
-flasgger==0.9.7.1
-Flask==3.1.1
-Flask-RESTful==0.3.10
-fonttools==4.53.1
-frozenlist==1.6.2
-future==1.0.0
-future-annotations==1.0.0
-geographiclib==2.0
-geopy==2.4.1
-gitdb==4.0.10
-GitPython==3.1.31
-gnureadline==8.2.13
-google-api-core==2.25.0
-google-api-python-client==2.171.0
-google-auth==2.40.2
+absolufy-imports==0.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+Authlib==1.6.1
+cachetools==5.5.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.2
+cloudpickle==3.1.1
+cryptography==45.0.5
+docstring_parser==0.17.0
+exceptiongroup==1.3.0
+fastapi==0.116.1
+google-adk==1.9.0
+google-api-core==2.25.1
+google-api-python-client==2.177.0
+google-auth==2.40.3
 google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.106.0
+google-cloud-appengine-logging==1.6.2
+google-cloud-audit-log==0.3.2
+google-cloud-bigquery==3.35.1
+google-cloud-core==2.4.3
+google-cloud-logging==3.12.1
+google-cloud-resource-manager==1.14.2
+google-cloud-secret-manager==2.24.0
+google-cloud-speech==2.33.0
+google-cloud-storage==2.19.0
+google-cloud-trace==1.16.2
+google-crc32c==1.7.1
+google-genai==1.28.0
+google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
-googlesearch-python==1.2.5
-gpg==1.16.0
-grapheme==0.6.0
-h11==0.14.0
-h2==4.1.0
-hexbytes==0.2.3
-holehe==1.61
-hpack==4.0.0
-html5lib==1.1
-httpagentparser==1.9.5
-httpcore==1.0.5
-httplib2==0.20.2
-httpx==0.27.0
-humanfriendly==10.0
-hyperframe==6.0.1
-identify==2.6.0
+graphviz==0.21
+greenlet==3.2.3
+grpc-google-iam-v1==0.14.2
+grpcio==1.74.0
+grpcio-status==1.74.0
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.1
 idna==3.10
-importlib-metadata==6.6.0
-importlib_resources==6.4.0
-inflect==7.2.1
-iniconfig==2.0.0
-inquirer==3.4.0
-instagram-private-api==1.6.0.0
-intelhex==2.3.0
-ipaddr==2.2.0
-ipwhois==1.1.0
-ipython==8.37.0
-itsdangerous==2.2.0
-jaraco.collections==5.0.1
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
-jaraco.text==3.12.1
-jedi==0.19.2
-jeepney==0.7.1
-Jinja2==3.1.6
-joblib==1.4.2
-jsonpickle==4.1.1
-jsonschema==4.17.3
-kaitaistruct==0.10
-keyring==23.5.0
-kiwisolver==1.4.5
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-lru-dict==1.3.0
-lxml==5.4.0
-macaroonbakery==1.3.1
-maigret @ file:///home/ferdyhape/Belajar/Hacking/OSINT/maigret
-Mako==1.3.5
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mechanize==0.4.10
-mistune==3.1.3
-mock==5.2.0
-monotonic==1.6
-more-itertools==8.10.0
-MouseInfo==0.1.3
-multidict==6.4.4
-mypy-extensions==0.4.4
-mythril==0.24.8
-netaddr==0.10.1
-netifaces==0.11.0
-networkx==2.6.3
-nodeenv==1.9.1
-ntlm-auth==1.4.0
-numpy==1.24.3
-oauthlib==3.2.0
-olefile==0.46
-opencv-python==4.10.0.84
-openpyxl==3.1.4
-oscrypto==1.3.0
-outcome==1.3.0.post0
-packaging==23.1
-pandas==2.0.2
-paramiko==2.9.3
-paramspider @ file:///home/ferdyhape/Belajar/Hacking/paramspider
-parsimonious==0.9.0
-parso==0.8.4
-persistent==6.0
-pexpect==4.8.0
-phonenumbers==8.13.39
-Pillow==9.5.0
-platformdirs==4.3.8
-pluggy==1.5.0
-plum-dispatch==1.7.4
-ply==3.11
-portend==3.2.0
-pre-commit==2.20.0
-prettytable==0.7.2
-Profil3r==1.0.5
-progress==1.6
-prompt_toolkit==3.0.51
-propcache==0.3.1
+importlib_metadata==8.7.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+mcp==1.12.3
+numpy==2.2.6
+opentelemetry-api==1.36.0
+opentelemetry-exporter-gcp-trace==1.9.0
+opentelemetry-resourcedetector-gcp==1.9.0a0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+packaging==25.0
 proto-plus==1.26.1
-protobuf==4.23.2
-ptyprocess==0.7.0
-publicsuffixlist==0.9.4
-pure_eval==0.2.3
-pwnedpasswords==2.0.0
-py-ecc==1.4.7
-py-evm==0.7.0a1
-py-flags==1.1.4
-py-solc==3.2.0
-py-solc-x==1.1.1
-pyarrow==12.0.1
+protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycairo==1.20.1
-pycares==4.9.0
-pycountry==24.6.1
 pycparser==2.22
-pycryptodome==3.20.0
-pycups==2.0.1
-pydeck==0.8.1b0
-pyethash==0.1.27
-pyFirmata==1.1.0
-PyGetWindow==0.0.9
-pygexf==0.2.2
-Pygments==2.15.1
-PyGObject==3.42.1
-pyHanko==0.29.0
-pyhanko-certvalidator==0.27.0
-PyInquirer==1.0.3
-PyJWT==2.3.0
-pymacaroons==0.13.0
-Pympler==1.0.1
-PyMsgBox==1.0.9
-PyNaCl==1.5.0
-pyo==1.0.4
-pyOpenSSL==24.2.1
-pyparsing==2.4.7
-pypdf==5.6.0
-PyPDF2==3.0.1
-pyperclip==1.9.0
-PyRect==0.2.0
-pyRFC3339==1.1
-pyrsistent==0.19.3
-PyScreeze==1.0.1
-pyserial==3.5
-PySocks==1.7.1
-pytest==8.3.1
-pytest-cov==5.0.0
-pytest-mock==3.14.0
-python-apt==2.4.0+ubuntu2
-python-bidi==0.6.6
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-docx==0.8.11
-python-dotenv==1.1.0
-python-magic==0.4.24
-python-pptx==0.6.23
-python-socks==2.7.1
-python-whois==0.7.3
-python3-xlib==0.15
-pytweening==1.2.0
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-pyvis==0.3.2
-pyxdg==0.27
-PyYAML==6.0.1
-readchar==4.2.1
-redis==6.2.0
-reedsolo==1.7.0
-regex==2024.4.16
-reportlab==4.4.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.4
-requests-futures==1.0.2
-requests-ntlm==1.1.0
-requests-toolbelt==0.9.1
-rich==13.4.2
-rlp==3.0.0
-rq==2.3.3
+rpds-py==0.26.0
 rsa==4.9.1
-runs==1.2.2
-scikit-learn==1.5.1
-scipy==1.14.0
-SecretStorage==3.3.1
-secure==0.3.0
-selenium==4.21.0
-selenium-wire==5.1.0
-semantic-version==2.10.0
-sherlock-project==0.15.0
+shapely==2.1.1
 six==1.17.0
-Slowloris==0.2.6
-smmap==5.0.0
 sniffio==1.3.1
-socid-extractor==0.0.27
-sortedcontainers==2.4.0
-soupsieve==2.7
-Spire.Pdf==10.5.2
-ssh-import-id==5.11
-stack-data==0.6.3
-stem==1.8.2
-streamlit==1.23.1
-svglib==1.5.1
-systemd-python==234
-tempora==5.6.0
-tenacity==8.2.2
-termcolor==2.4.0
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenize_rt==6.2.0
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.3.2
-torrequest==0.1.0
-tqdm==4.66.4
-traitlets==5.14.3
-transaction==4.0
-trie==2.2.0
-trio==0.25.1
-trio-websocket==0.11.1
-typeguard==4.3.0
-typing_extensions==4.12.2
-tzdata==2023.3
-tzlocal==4.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodecsv==0.14.1
+SQLAlchemy==2.0.42
+sse-starlette==3.0.2
+starlette==0.47.2
+tenacity==8.5.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzlocal==5.3.1
 uritemplate==4.2.0
-uritools==5.0.0
-urllib3==1.25.11
-usb-creator==0.3.7
-validators==0.20.0
-vboxapi==1.0
-virtualenv==20.26.3
-wadllib==1.3.6
-watchdog==3.0.0
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.1.3
-wget==3.2
-whitenoise==6.7.0
-wsproto==1.2.0
-xdg==5
-xhtml2pdf==0.2.17
-xkit==0.0.0
-XlsxWriter==3.2.0
-XMind==1.2.0
-xmod==1.8.1
-yarl==1.20.0
-z3-solver==4.12.5.0
-zc.lockfile==3.0.post1
-zipp==3.15.0
-zope.deferredimport==5.0
-zope.interface==6.4.post2
-zope.proxy==5.2
-zstandard==0.23.0
+urllib3==2.5.0
+uvicorn==0.35.0
+watchdog==6.0.0
+websockets==15.0.1
+zipp==3.23.0
+
